fixed horizontal scroll

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -7,6 +7,223 @@
     font-weight: 300;
 }
 
+*,
+*::before,
+*::after {
+    box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+}
+
+.nav-container {
+    height: 60px;
+    max-width: 1200px;
+    margin: auto;
+    background-color: #FFFFFF;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+    flex-wrap: wrap;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    justify-content: space-between;
+    overflow: visible;
+}
+  
+.nav-container .logo {
+    max-width: 250px;
+    padding: 0 10px;
+    overflow: hidden;
+}
+  
+.nav-container .logo a {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+    flex-wrap: wrap;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
+    height: 60px;
+}
+  
+.nav-container .logo a img {
+    max-width: 100%;
+    max-height: 60px;
+}
+  
+.nav-container .navbar {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+    flex-wrap: wrap;
+    -webkit-box-flex: 1;
+    -ms-flex: 1;
+    flex: 1;
+    padding: 0 10px;
+    float: right;
+    justify-content: flex-end;
+}
+  
+.nav-container .navbar ul {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+    flex-wrap: wrap;
+    list-style: none;
+    margin: 0;
+    padding: 0;
+}
+  
+.nav-container .navbar ul li a {
+    text-decoration: none;
+    color: #000000;
+    font-size: 16px;
+    display: block;
+    height: 60px;
+    line-height: 60px;
+    cursor: pointer;
+    padding: 0 10px;
+}
+  
+.nav-container .navbar ul li button {
+    height: 60px;
+}
+  
+.nav-container .navbar ul li a:hover {
+    color: #FFFFFF;
+    background-color: #003262;
+}
+  
+.nav-container .navbar ul .close {
+    display: none;
+    text-align: right;
+    padding: 10px;
+}
+  
+.nav-container .navbar ul .close span {
+    font-size: 40px;
+    display: inline-block;
+    padding: 0 10px;
+    cursor: pointer;
+}
+  
+.nav-container .navbar .icon-bar {
+    padding: 18px 8px;
+    width: 50px;
+    height: 60px;
+    display: none;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    -webkit-box-pack: justify;
+    -ms-flex-pack: justify;
+    justify-content: space-between;
+    cursor: pointer;
+}
+    
+.nav-container .navbar .icon-bar i {
+    background-color: #000000;
+    height: 2px;
+}
+  
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f9f9f9;
+    min-width: 160px;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+}
+  
+.dropdown-content a {
+    float: none;
+    text-align: left;
+}
+  
+.dropdown-content a:hover {
+    background-color: #003262;
+    color:#FFFFFF;
+}
+  
+.dropdown:hover .drop-button{
+    background-color: #003262;
+    color: #FFFFFF;
+}
+  
+.dropdown:hover .dropdown-content {
+    display: block;
+}
+  
+@media only screen and (max-width: 650px) {
+    .nav-container {
+      -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+      justify-content: space-between;
+    }
+  
+    .nav-container .logo {
+      -webkit-box-flex: 1;
+      -ms-flex: 1;
+      flex: 1;
+    }
+  
+    .nav-container .navbar {
+      -webkit-box-flex: 0;
+      -ms-flex: 0;
+      flex: 0;
+    }
+  
+    .nav-container .navbar ul {
+      -ms-flex-wrap: nowrap;
+      flex-wrap: nowrap;
+      position: fixed;
+      left: 100%;
+      -webkit-box-orient: vertical;
+      -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+      flex-direction: column;
+      background: #FFFFFF;
+      width: 100%;
+      height: 100%;
+      overflow: auto;
+      -webkit-transition: left .3s;
+      -o-transition: left .3s;
+      transition: left .3s;
+    }
+  
+    .nav-container .navbar ul li a {
+      padding: 10px;
+      font-size: 16px;
+      height: auto;
+      line-height: normal;
+      color: #000000;
+    }
+  
+    .nav-container .navbar ul .close {
+      display: block;
+    }
+  
+    .nav-container .navbar .icon-bar {
+      display: -webkit-box;
+      display: -ms-flexbox;
+      display: flex;
+    }
+  
+    .nav-container .navbar ._Menus-show {
+      left: 0;
+      z-index: 1;
+    }
+}  
+
+body {
+    margin: 0;
+}
+
 p {
     font-size: calc(12px + (16 - 12) * ((100vw - 300px) / (1600 - 300)));
     line-height: 175%;
@@ -22,89 +239,14 @@ h1 {
     margin: auto;
 }
 
-.top-navigation {
-    background-color: #ffffff;
-    overflow: visible;
-    float: right;
-    max-height: 60px;
-}
-
-.top-navigation a {
-    float: left;
-    display: block;
-    color: #000000;
-    text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;
-    font-size: calc(12px + (16 - 12) * ((100vw - 300px) / (1600 - 300)));
-}
-
-.dropdown {
-    float: left;
-    font-size: calc(12px + (16 - 12) * ((100vw - 300px) / (1600 - 300)));
-}
-
-.dropdown .drop-button {
-    border: none;
-    outline: none;
-    color: #000000;
-    padding: 14px 16px;
-    background-color: inherit;
-    font-family: inherit;
-    font-size: inherit;
-    margin: 0;
-}
-
-.dropdown-content {
-    display: none;
-    position: absolute;
-    background-color: #f9f9f9;
-    min-width: 160px;
-    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-    z-index: 1;
-}
-
-.dropdown-content a {
-    float: none;
-    color: black;
-    padding: 12px 16px;
-    text-decoration: none;
-    display: block;
-    text-align: left;
-}
-
-.dropdown-content a:hover {
-    background-color: #c3c3c3;
-    color: black;
-}
-
-.dropdown:hover .dropdown-content {
-    display: block;
-}
-
-header {
-    top: 0;
-    background: #ffffff;
-    width: 100%;
-    max-height: 60px;
-}
-
-body {
-    margin: 0;
-}
-
-.header-logo, .top-navigation {
-    display: inline;
+.align-items-center {
+    max-width: 100%;
 }
 
 .image-responsive {
     display: block;
     width: 100%;
     height: auto;
-}
-
-.berkeley-logo {
-    max-height: 60px;
 }
 
 .anniversary-logo {
@@ -125,6 +267,7 @@ body {
 .hero-container {
     background: #DDD5C7;
     max-height: 564px;
+    max-width: 100%;
 }
 
 .video-container {
@@ -137,7 +280,6 @@ body {
 .video-container iframe, .video-container embed {
     position: absolute;
     top: 0;
-    left: 0;
     width: 100%;
     height: 100%;
     max-width: 100%;
